some demo data in test app

--- a/CrudoSql.Tests/CrudoSql.Tests.fsproj
+++ b/CrudoSql.Tests/CrudoSql.Tests.fsproj
@@ -9,4 +9,12 @@
     <Compile Include="Program.fs" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\CrudoSql\CrudoSql.fsproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="System.Data.SqlClient" Version="4.6.0" />
+  </ItemGroup>
+
 </Project>
