bootstrap.min.css now in assets

--- a/CrudoSql/CrudoSql.fsproj
+++ b/CrudoSql/CrudoSql.fsproj
@@ -30,4 +30,7 @@
     <PackageReference Include="Suave" Version="2.5.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <EmbeddedResource Include="assets\*.*"/>
+  </ItemGroup>
 </Project>
