--- a/CrudoSql.Tests/CrudoSql.Tests.fsproj
+++ b/CrudoSql.Tests/CrudoSql.Tests.fsproj
@@ -15,6 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="mysql.data" Version="8.0.16" />
     <PackageReference Include="Oracle.ManagedDataAccess.Core" Version="2.19.3" />
     <PackageReference Include="System.Data.SqlClient" Version="4.6.0" />
   </ItemGroup>
